// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Component should handle per-page limit, and page offset updates through props: page, offset 1`] = `
Object {
  "pageOffset": 0,
  "pagePage": 2,
  "pagePerPage": 20,
}
`;

exports[`Pagination Component should handle per-page limit, and page offset updates through props: per-page, limit 1`] = `
Object {
  "perPageOffset": 0,
  "perPagePage": 1,
  "perPagePerPage": 20,
}
`;

exports[`Pagination Component should handle updating paging for redux state: dispatch filter 1`] = `
Array [
  Array [
    Array [
      Object {
        "offset": 10,
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_offset",
        "viewId": "lorem",
      },
    ],
  ],
  Array [
    Array [
      Object {
        "limit": 10,
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_limit",
        "viewId": "lorem",
      },
    ],
  ],
  Array [
    Array [
      Object {
        "offset": 0,
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_offset",
        "viewId": "lorem",
      },
    ],
  ],
  Array [
    Array [
      Object {
        "limit": 20,
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_limit",
        "viewId": "lorem",
      },
    ],
  ],
]
`;

exports[`Pagination Component should render a non-connected component: non-connected 1`] = `
<Pagination
  className="hidden"
  defaultToFullPage={false}
  dropDirection="down"
  firstPage={1}
  isCompact={false}
  isDisabled={true}
  isSticky={false}
  itemCount={0}
  itemsEnd={null}
  itemsStart={null}
  offset={0}
  onFirstClick={[Function]}
  onLastClick={[Function]}
  onNextClick={[Function]}
  onPageInput={[Function]}
  onPerPageSelect={[Function]}
  onPreviousClick={[Function]}
  onSetPage={[Function]}
  ouiaSafe={true}
  page={1}
  perPage={20}
  perPageOptions={
    Array [
      Object {
        "title": "10",
        "value": 10,
      },
      Object {
        "title": "20",
        "value": 20,
      },
      Object {
        "title": "50",
        "value": 50,
      },
      Object {
        "title": "100",
        "value": 100,
      },
    ]
  }
  titles={
    Object {
      "currPage": "Current page",
      "items": "",
      "itemsPerPage": "Items per page",
      "optionsToggle": "Items per page",
      "page": "",
      "paginationTitle": "Pagination",
      "perPageSuffix": "per page",
      "toFirstPage": "Go to first page",
      "toLastPage": "Go to last page",
      "toNextPage": "Go to next page",
      "toPreviousPage": "Go to previous page",
    }
  }
  toggleTemplate={[Function]}
  variant={null}
  widgetId="pagination-options-menu"
/>
`;

exports[`Pagination Component should reset offset/pages when per-page limit is adjusted through redux state: dispatch per-page 1`] = `
Array [
  Array [
    Array [
      Object {
        "offset": 0,
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_offset",
        "viewId": "lorem",
      },
    ],
  ],
  Array [
    Array [
      Object {
        "limit": 100,
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_limit",
        "viewId": "lorem",
      },
    ],
  ],
]
`;
